@@ -56,7 +56,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.TimeZone;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.persistence.Entity;
 import javax.persistence.EntityManagerFactory;
@@ -89,7 +88,7 @@ public abstract class JpaTransactionManagerExtension
       "google/registry/persistence/transaction/cleanup_database.sql";
   private static final String POSTGRES_DB_NAME = "postgres";
   // The type of JDBC connections started by the tests. This string value
-  // is documented in PSQL's official user guide.
+  // is documented in PostgreSQL's official user guide.
   private static final String CONNECTION_BACKEND_TYPE = "client backend";
   private static final int ACTIVE_CONNECTIONS_CAP = 5;
 
@@ -98,7 +97,7 @@ public abstract class JpaTransactionManagerExtension
   private final ImmutableList<Class<?>> extraEntityClasses;
   private final ImmutableMap<String, String> userProperties;
 
-  private static final JdbcDatabaseContainer database = create();
+  private static final JdbcDatabaseContainer<?> database = create();
   private static final HibernateSchemaExporter exporter =
       HibernateSchemaExporter.create(
           database.getJdbcUrl(), database.getUsername(), database.getPassword());
@@ -117,7 +116,7 @@ public abstract class JpaTransactionManagerExtension
   // to false.
   private boolean includeNomulusSchema = true;
 
-  // Whether to pre-polulate some registrars for ease of testing.
+  // Whether to pre-populate some registrars for ease of testing.
   private final boolean withCannedData;
 
   private TimeZone originalDefaultTimeZone;
@@ -138,9 +137,9 @@ public abstract class JpaTransactionManagerExtension
     this.withCannedData = withCannedData;
   }
 
-  private static JdbcDatabaseContainer create() {
-    PostgreSQLContainer container =
-        new PostgreSQLContainer(NomulusPostgreSql.getDockerTag())
+  private static JdbcDatabaseContainer<?> create() {
+    PostgreSQLContainer<?> container =
+        new PostgreSQLContainer<>(NomulusPostgreSql.getDockerTag())
             .withDatabaseName(POSTGRES_DB_NAME);
     container.start();
     return container;
@@ -152,7 +151,7 @@ public abstract class JpaTransactionManagerExtension
             Stream.of(initScriptPath.orElse("")),
             extraEntityClasses.stream().map(Class::getCanonicalName))
         .sorted()
-        .collect(Collectors.toList())
+        .toList()
         .hashCode();
   }
 
@@ -182,9 +181,9 @@ public abstract class JpaTransactionManagerExtension
 
   /**
    * Returns the full set of properties for setting up JPA {@link EntityManagerFactory} to the test
-   * database. This allows creation of customized JPA by individual tests.
+   * database. This allows the creation of customized JPA by individual tests.
    *
-   * <p>Test that create {@code EntityManagerFactory} instances are reponsible for tearing them
+   * <p>Test that create {@code EntityManagerFactory} instances are responsible for tearing them
    * down.
    */
   public ImmutableMap<String, String> getJpaProperties() {
@@ -248,7 +247,7 @@ public abstract class JpaTransactionManagerExtension
     TimeZone.setDefault(originalDefaultTimeZone);
   }
 
-  public JdbcDatabaseContainer getDatabase() {
+  public JdbcDatabaseContainer<?> getDatabase() {
     return database;
   }
 
@@ -274,11 +273,11 @@ public abstract class JpaTransactionManagerExtension
   }
 
   /**
-   * Asserts that the number of connections to the test database is reasonable, i.e. less than 5.
+   * Asserts that the number of connections to the test database is reasonable, i.e., less than 5.
    * Ideally, it should be 0 if the connection is closed by the test as we don't use a connection
-   * pool. However, Hibernate may still maintain some connection by it self. In addition, the
+   * pool. However, Hibernate may still maintain some connection by itself. In addition, the
    * metadata table we use to detect active connection may not remove the closed connection
-   * immediately. So, we decide to relax the condition to check if the number of active connection
+   * immediately. So, we decide to relax the condition to check if the number of active connections
    * is less than 5 to reduce flakiness.
    */
   private void assertReasonableNumDbConnections() {
@@ -359,7 +358,7 @@ public abstract class JpaTransactionManagerExtension
                 .build())
         .setLocalizedAddress(
             new RegistrarAddress.Builder()
-                .setStreet(ImmutableList.of("123 Example B\u0151ulevard"))
+                .setStreet(ImmutableList.of("123 Example Bőulevard"))
                 .setCity("Williamsburg")
                 .setState("NY")
                 .setZip("11211")
